# prod_module_task

mysite/: Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py  wsgi.py
