[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["ivan_ilin <ivaniliin@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.9"
djangorestframework = "^3.15.2"
django-filter = "^24.2"
django-debug-toolbar = "^4.4.6"
pillow = "^10.4.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
